--- a/m3-w2d5-validation-exercises-pair/Validation.Web/Views/Users/Index.cshtml
+++ b/m3-w2d5-validation-exercises-pair/Validation.Web/Views/Users/Index.cshtml
@@ -1,8 +1,24 @@
-﻿
+﻿@using Validation.Web.Models
+@model LoginViewModel
+
 @{
     ViewBag.Title = "Index";
 }
 
-<h2>Index</h2>
+<h2>Login</h2>
 
-<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam a odio lobortis, rhoncus mauris dignissim, tristique lectus. Morbi risus ex, pulvinar tincidunt lacus placerat, posuere faucibus felis. Proin semper nisi sit amet vulputate lobortis. Pellentesque gravida lectus quis neque vestibulum mattis. Sed pellentesque maximus quam. Aliquam erat volutpat. Aliquam ornare ligula in lobortis tincidunt. Ut leo ipsum, ullamcorper eget quam sed, consequat congue diam. Praesent ullamcorper massa et ultrices condimentum. Fusce dapibus sodales malesuada. Phasellus a lacus ultrices, commodo velit ut, gravida mauris. Donec ac neque urna. Nam ut condimentum elit. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque eu condimentum nunc, at vehicula purus. Fusce euismod nunc sed arcu convallis congue.</p>
+@using (Html.BeginForm("Index", "Survey", FormMethod.Post))
+{
+    <div class="formInputGroup">
+        @Html.Label("Email", "Email")
+        @Html.TextBoxFor(m => m.Email)
+    </div>
+    <div class="formInputGroup">
+        @Html.Label("Password", "Password")
+        @Html.TextBoxFor(m => m.Password)
+    </div>
+    <div>
+        <br />
+        <input type="submit" value="Submit" class="btn btn-primary" />
+    </div>
+}
