Finished validation exercises

--- a/m3-w2d5-validation-exercises-pair/Validation.Web/Views/Shared/_Layout.cshtml
+++ b/m3-w2d5-validation-exercises-pair/Validation.Web/Views/Shared/_Layout.cshtml
@@ -30,8 +30,8 @@
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    <li>@Html.ActionLink("New User", "Register", "Users")</li>
-                    <li>@Html.ActionLink("Login", "Login", "Users")</li>
+                    <li>@Html.ActionLink("New User", "NewUser", "Users")</li>
+                    <li>@Html.ActionLink("Login", "Index", "Users")</li>
 
                 </ul>
             </div>
