--- a/m3-w2d5-validation-exercises-pair/Validation.Web/Views/Users/Index.cshtml
+++ b/m3-w2d5-validation-exercises-pair/Validation.Web/Views/Users/Index.cshtml
@@ -7,7 +7,7 @@
 
 <h2>Login</h2>
 
-@using (Html.BeginForm("Index", "Survey", FormMethod.Post))
+@using (Html.BeginForm("LoginConfirmation", "Users"))
 {
     <div class="formInputGroup">
         @Html.Label("Email", "Email")
