--- a/m3-w2d5-validation-exercises-pair/Validation.Web/Views/Users/NewUser.cshtml
+++ b/m3-w2d5-validation-exercises-pair/Validation.Web/Views/Users/NewUser.cshtml
@@ -8,7 +8,7 @@
 <h2>NewUser</h2>
 
 
-@using (Html.BeginForm())
+@using (Html.BeginForm("RegistrationConfirmation","Users"))
 {
     @Html.AntiForgeryToken()
 
